Adding path to sources in code coverage task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,5 +90,6 @@ steps:
     reportDirectory: '$(Build.SourcesDirectory)\\CodeCoverage'
     failIfCoverageEmpty: true # New feature: Fail the task if code coverage is empty
     additionalCodeCoverageFiles: '**/*.coverage' # New feature: Include additional code coverage files
+    pathToSources: '$(Build.SourcesDirectory)' # Path to the sources
   displayName: 'Publish Code Coverage Results'
 
