--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,11 +82,11 @@ steps:
     TargetFolder: '$(Build.ArtifactStagingDirectory)\\CodeCoverage'
   displayName: 'Copy Code Coverage HTML to Staging Directory'
 
-- task: PublishCodeCoverageResults@1
+- task: PublishCodeCoverageResults@2
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '$(coverageFilePath)'
     reportDirectory: '$(Build.SourcesDirectory)\\CodeCoverage'
-    failIfCoverageEmpty: true # New feature: Fail the task if code coverage is empty
+    failIfCoverageEmpty: true # Fail the task if code coverage is empty
+    pathMappings: 'C:\agent\_work\2\s=$(Build.SourcesDirectory)' # Map the agent path to the source path
   displayName: 'Publish Code Coverage Results'
-
