--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
   coverageFilePath: '$(Build.SourcesDirectory)\\TestResults\\coverage\\coverage.cobertura.xml'
+  system.debug: true
 
 steps:
 - task: UseDotNet@2
