--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -82,10 +82,11 @@ steps:
     TargetFolder: '$(Build.ArtifactStagingDirectory)\\CodeCoverage'
   displayName: 'Copy Code Coverage HTML to Staging Directory'
 
-- task: PublishCodeCoverageResults@1
+- task: PublishCodeCoverageResults@2
   inputs:
     codeCoverageTool: 'Cobertura'
     summaryFileLocation: '$(coverageFilePath)'
     reportDirectory: '$(Build.SourcesDirectory)\\CodeCoverage'
+    pathToSources: '$(Build.SourcesDirectory)'
     failIfCoverageEmpty: true
   displayName: 'Publish Code Coverage Results'
